# sql-performance-mcp

./: .gitignore  README.md  README.zh-CN.md  main.py  pyproject.toml  requirements.txt  server.py
db/: __init__.py  connection.py  mysql_inspector.py  queries.py
prompts/: performance_analysis.txt
sql_performance_mcp/: __init__.py  server.py
sql_performance_mcp/db/: __init__.py  common.py  connection.py  factory.py  mysql_inspector.py  postgresql_inspector.py  queries.py  sqlserver_inspector.py
sql_performance_mcp/tools/: __init__.py  analyze.py  execution_plan.py  indexes.py  schema.py
tests/: test_analyze.py  test_db_connections.py  test_db_tools.py  test_queries.py
tools/: analyze.py  execution_plan.py  indexes.py  schema.py
