[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sql-performance-mcp"
version = "0.1.1"
description = "MySQL SQL performance analysis MCP server"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "mcp>=1.27.0",
    "pymysql>=1.1.1",
]

[project.scripts]
sql-performance-mcp = "sql_performance_mcp.server:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["sql_performance_mcp*"]
